converting components to nextjs modules

--- a/src/components/layouts/RecetteTaxonomy.module.sass
+++ b/src/components/layouts/RecetteTaxonomy.module.sass
@@ -34,7 +34,7 @@
                 margin-top: var(--size-large)
 
 .RecetteTaxonomy__List
-    .panel
+    :global(.panel)
         margin: var(--size-regular) 0
         padding: var(--size-medium)
         display: block
