--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,10 +1,26 @@
+// Global Styles
 @import './reset.sass'
 @import './themes.sass'
 @import './globals.sass'
+@import 'https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'
+
+// UI Kit Components
 @import './components/button.sass'
 @import './components/checkbox.sass'
 @import './components/input.sass'
 @import './components/pad.sass'
 @import './components/panel.sass'
 @import './components/typography.sass'
+
+// React Components
+@import './components/react/Block.sass'
+@import './components/react/Icon.sass'
+@import './components/react/Level.sass'
+@import './components/react/NavBar.sass'
+@import './components/react/PageFooter.sass'
+@import './components/react/RecipeContent.sass'
+@import './components/react/RecipeIngredients.sass'
+@import './components/react/RecipeSummary.sass'
+
+// Print Styles
 @import './print.sass'
