adding author taxonomy, taxonomy root pages

--- a/src/styles/components/typography.sass
+++ b/src/styles/components/typography.sass
@@ -12,3 +12,24 @@
 
 .text-small
     font-size: var(--font-size-small)
+
+.text-taxonomy,
+a[href].text-taxonomy
+    display: inline-block
+    font-size: var(--font-size-regularSmall)
+    font-weight: var(--font-weight-semibold)
+    color: var(--font-color-regular)
+    letter-spacing: 4px
+    text-transform: uppercase
+
+a[href].text-taxonomy
+    border-bottom: solid 2px var(--border-color)
+    padding-bottom: 4px
+    transition: border-color 0.1s, color 0.1s
+
+    &:hover
+        color: var(--font-color-heavy)
+        border-color: var(--button-border-color-hover)
+
+    &:active
+        transform: translateY(1px)
