font fixes, first real recipe

--- a/src/components/layouts/RecetteTaxonomy.module.sass
+++ b/src/components/layouts/RecetteTaxonomy.module.sass
@@ -46,6 +46,7 @@
             color: var(--font-color-heavy)
             font-size: var(--font-size-medium)
             font-weight: var(--font-weight-semibold)
+            margin-bottom: var(--size-small)
 
         p
             color: var(--font-color)
