--- a/src/styles/components/react/RecipeSummary.sass
+++ b/src/styles/components/react/RecipeSummary.sass
@@ -1,6 +1,10 @@
 .RecipeSummary
     box-sizing: border-box
 
+.RecipeSummary__Summary
+    p
+        margin: var(--size-small) 0
+
 .RecipeSummary__About
     white-space: nowrap
     
