--- a/src/styles/themes.sass
+++ b/src/styles/themes.sass
@@ -90,8 +90,8 @@ body
      */
 
     // Font values
-    --font-family: 'Cabin', sans-serif
-    --font-family-title: 'Playfair Display', serif
+    // --font-family: var(--font-cabin)
+    // --font-family-title: var(--font-playfairDisplay)
     --font-weight-regular: 300
     --font-weight-medium: 400
     --font-weight-semibold: 500
