--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -16,7 +16,6 @@ html
 body
     color: var(--font-color)
     background-color: var(--body-bg-color)
-    font-family: var(--font-family)
     font-weight: var(--font-weight-regular)
     letter-spacing: 0.4px
     line-height: 1.4
@@ -25,98 +24,50 @@ body
     min-height: 100svh
     overflow-x: hidden
 
-input
-    color: inherit
+#main
     font-family: var(--font-family)
-    font-weight: var(--font-weight-regular)
 
-a
-    text-decoration: none
+    input
+        color: inherit
+        font-family: var(--font-family)
+        font-weight: var(--font-weight-regular)
 
-em
-    font-style: italic
+    a
+        text-decoration: none
 
-hr
-    margin: var(--size-large) auto
-    border: none
-    border-bottom: solid 1px var(--border-color-heavy)
-    position: relative
-    overflow: visible
+    em
+        font-style: italic
 
-    &::after
-        content: '&'
-        display: block
-        position: absolute
-        top: -0.1rem
-        left: 50%
-        transform: translate(-50%, -50%)
-        color: var(--font-color-light)
+    hr
+        margin: var(--size-large) auto
+        border: none
+        border-bottom: solid 1px var(--border-color-heavy)
+        position: relative
+        overflow: visible
+
+        &::after
+            content: '&'
+            display: block
+            position: absolute
+            top: -0.1rem
+            left: 50%
+            transform: translate(-50%, -50%)
+            color: var(--font-color-light)
+            font-family: var(--font-family-title)
+            font-size: 1.25rem
+            line-height: 1
+            font-weight: lighter
+            padding: 2px
+            background: var(--body-bg-color)
+
+
+    h1
         font-family: var(--font-family-title)
-        font-size: 1.25rem
-        line-height: 1
-        font-weight: lighter
-        padding: 2px
-        background: var(--body-bg-color)
+        font-weight: 700
+        font-size: 48px
+        color: var(--font-color-heavy)
+        line-height: 1.1
+        letter-spacing: normal
 
-
-h1
-    font-family: var(--font-family-title)
-    font-weight: 700
-    font-size: 48px
-    color: var(--font-color-heavy)
-    line-height: 1.1
-    letter-spacing: normal
-
-h2
-    font-size: var(--font-size-medium)
-
-.--hide
-    display: none !important
-
-// .--blSmall
-//     @include isSmallDevice
-//         display: block !important
-
-// .--blMedium
-//     @include isMediumDevice
-//         display: block !important
-
-// .--blWide
-//     @include isWideDevice
-//         display: block !important
-
-// .--inBlSmall
-//     @include isSmallDevice
-//         display: inline-block !important
-
-// .--inBlMedium
-//     @include isMediumDevice
-//         display: inline-block !important
-
-// .--inBlWide
-//     @include isWideDevice
-//         display: inline-block !important
-
-// .--flSmall
-//     @include isSmallDevice
-//         display: flex !important
-
-// .--flMedium
-//     @include isMediumDevice
-//         display: flex !important
-
-// .--flWide
-//     @include isWideDevice
-//         display: flex !important
-
-.--inFlSmall
-    @include isSmallDevice
-        display: inline-flex !important
-
-.--inFlMedium
-    @include isMediumDevice
-        display: inline-flex !important
-
-.--inFlWide
-    @include isWideDevice
-        display: inline-flex !important
+    h2
+        font-size: var(--font-size-medium)
