--- a/src/components/layouts/RecetteTaxonomy.module.sass
+++ b/src/components/layouts/RecetteTaxonomy.module.sass
@@ -46,7 +46,7 @@
             color: var(--font-color-heavy)
             font-size: var(--font-size-medium)
             font-weight: var(--font-weight-semibold)
-            margin-bottom: var(--size-small)
+            margin-bottom: var(--size-verySmall)
 
         p
             color: var(--font-color)
