--- a/src/styles/print.sass
+++ b/src/styles/print.sass
@@ -6,7 +6,7 @@
         *
             color: black !important
 
-    .Recette
+    #main > div
         > header
             display: none !important
 
@@ -23,7 +23,11 @@
         hr
             display: none !important
 
+        .text-taxonomy
+            border-bottom: 1px solid black !important
+
         .checkbox,
+        .button.button--primary,
         .RecipeSummary__Tags,
         .RecipeSummary__Category
             display: none !important
