padding on search results header

--- a/src/styles/components/react/NavBar.sass
+++ b/src/styles/components/react/NavBar.sass
@@ -49,6 +49,7 @@
 
                 h4
                     font-weight: var(--font-weight-semibold)
+                    margin-bottom: var(--size-verySmall)
             
                 &:hover
                     background-color: var(--border-color)
